# crust

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
src/: cow.hpp  mutex.hpp
tests/: test_cow.cpp  test_mutex.cpp
tools/: configure  run-tests
